@@ -59,6 +59,7 @@
 #include <getopt.h>
 
 #include "gettext.h"
+#include <locale.h>
 #define _(String) gettext (String)
 
 #include "manconfig.h"
@@ -343,6 +344,13 @@ int main (int argc, char *argv[])
 	int c;
 
 	program_name = base_name (argv[0]);
+
+	if (!setlocale (LC_ALL, ""))
+		/* Obviously can't translate this. */
+		error (0, 0, "can't set the locale; make sure $LC_* and $LANG "
+			     "are correct");
+	bindtextdomain (PACKAGE, LOCALEDIR);
+	textdomain (PACKAGE);
 
 	while ((c = getopt_long (argc, argv, args,
 				 long_options, NULL)) != EOF) {
